clang/test/BSC/Negative/OwnedStruct/global-var/global-var.cbs
// RUN: %clang_cc1 -verify %s

owned struct S {
public:
  int a;
  int b;
};

S s1 = {}; // expected-error {{type of global variable cannot qualified by 'owned' }}
S s2 = { 2, 3 }; // expected-error {{type of global variable cannot qualified by 'owned' }}
S s3 = { .a = 1, .b = 2}; // expected-error {{type of global variable cannot qualified by 'owned' }}

owned struct U<T> {
public:
  T a;
  int* p;
};

U<int> u1 = {}; // expected-error {{type of global variable cannot qualified by 'owned' }}
U<double> u2 = { 1.5, 0 }; // expected-error {{type of global variable cannot qualified by 'owned' }}
U<unsigned int> u3 = { 2, 0 }; // expected-error {{type of global variable cannot qualified by 'owned' }}